Centered image and tagline

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
-	
-
 	<head>
-		
-
+		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
+	<div id="container">
+		
+
+	
 	<img src="images/diamond.svg " alt="">
 		Comming soon.... Hello World!
+		Lorem impsum dolores... Lorem impsum dolores... Lorem impsum dolores... Lorem impsum dolores... Lorem impsum dolores... Lorem impsum dolores...
+
+		</div>
 	</body>
 </html>
